# WonkyTanks

./: .gitconfig  LICENSE  empty_file
UnityProject/Assets/: BulletCollider.cs
UnityProject/Assets/Materials/: Ground.mat
UnityProject/Assets/Materials/Materials/: Rad Collectable.mat
UnityProject/Assets/Plugins/: WebsockAdaptor.jslib
UnityProject/Assets/Prefabs/: Collectable.prefab  Feets.prefab  Gaudian.prefab  Walls (Unscalable).prefab  WonkyBullet.prefab
UnityProject/Assets/Scripts/: Bar.cs  BulletBehavior.cs  BulletCollision.cs  CollectableController.cs  Game.cs  GameControl.cs  MenuController.cs  MessageTypes.cs  Timer.cs  WebsockAdaptor.cs
UnityProject/Assets/_Scenes/: Level.unity  Title.unity
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
UnityProject/Wonky Tank/ProjectSettings/: TagManager.asset
Wonky Tank/Wonky Tank/ProjectSettings/: TagManager.asset
build_tets/WonkyTankAlpha_Data/: level0
rust-server/: Cargo.toml
rust-server/example/: ws.html  ws.js
rust-server/src/: lib.rs  main.rs
wonky_test_mvp/Assets/: BallControl.cs  BallPreFab.prefab  ExitSquare.cs  GunControl.cs  MainGame.unity  MenuManager.cs  MenuManager.prefab  TankBodyControls.cs  main_menu.unity  scene_1.unity  walls.prefab
wonky_test_mvp/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
wonky_test_mvp/Temp/: UnityTempFile-3e78ddbdad552b1489c1c1ca70da128e  UnityTempFile-cf7605cad342b934594070057f4d1353
wonky_test_mvp/Temp/__Backupscenes/: 0.backup
(+46 files in other folders)
