[package]
name = "wonky-tanks-server"
version = "0.1.0"

[dependencies]
tokio-core = "0.1.7"
futures = "0.1.13"
tk-http = "0.3.3"
tk-bufstream = "0.3.0"
netbuf = "0.4.0"
tk-listen = "0.1.0"
walkdir = "2"

env_logger = "0.4.3"
argparse = "0.2.1"
futures-cpupool = "0.1.5"
time = "0.1.37"
log = "0.3.8"
